<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    android:paddingTop="10dp"
    tools:context=".Settings_Activity">


    <ImageView
        android:id="@+id/iv_btn_back_to_settings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_login_title"
        android:textColor="@color/almostBlack"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:background="@drawable/style_edit_text"
        android:hint="@string/login"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_label"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/style_edit_text"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/style_edit_text"
        android:text="@string/sign_in_button_text"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />


    <Button
        android:id="@+id/btn_registration"
        android:layout_width="205dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/style_edit_text"
        android:text="@string/register_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/btn_log_in"
        app:layout_constraintStart_toEndOf="@+id/btn_log_in" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="или"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registration" />

    <ImageView
        android:id="@+id/icon_vkontakte"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/icon_social_vk"
        app:layout_constraintBottom_toBottomOf="@+id/icon_google_plus"
        app:layout_constraintStart_toEndOf="@+id/icon_google_plus" />

    <ImageView
        android:id="@+id/icon_google_plus"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_social_google_plus"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/icon_facebook"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icon_social_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/icon_google_plus"
        app:layout_constraintEnd_toStartOf="@+id/icon_google_plus" />


</androidx.constraintlayout.widget.ConstraintLayout>